--- a/src/App.css
+++ b/src/App.css
@@ -1,87 +1,103 @@
-/* Nav style start */
-nav {
-  position: fixed;
-  top: 30%;
-  display: flex;
-  flex-direction: column;
-  z-index: 1;
-}
-nav a {
-  display: inline-flex;
-  align-items: center;
-}
-nav span {
-  width: 0;
-  display: block;
-  overflow: hidden;
-  transition: all 300ms;
+body, main{
+  background-color: black;
+  color: #fff;
 }
 
-nav i {
-  padding: 13px;
-  border-radius: 50%;
-  background-color: whitesmoke;
-  color: rgb(2, 51, 35);
-  transition: all 500ms;
-}
-nav a:hover {
-  color: whitesmoke;
-  background-color: blue;
-}
-nav i:hover + .link_text {
-  width: max-content;
-  padding: 5px;
-}
-
-@media screen and (max-width: 780px) {
-  nav {
-    position: static;
-
-    display: flex;
-    justify-content: flex-end;
-    flex-direction: row;
-  }
-  nav i:hover + .link_text {
-    width: 0;
-    padding: 0;
-  }
-}
-
-/* Nav style End */
-
-main {
-  background-color: ghostwhite;
-}
 
 /* Banner style start */
 .banner_block {
-  height: 100vh;
+
+  min-height: 100vh;
+  position: relative;
+  background-color: rgb(0, 0, 0);
+
 }
+
 .bannerImg {
   width: 100%;
   height: 100%;
   object-fit: cover;
-  opacity: 0.2;
+  mask-image: linear-gradient(180deg, white, transparent);
 }
+
 .banner_info {
-  height: 100%;
+  padding: 0 !important;
+  min-height: 100%;
+  width: 100%;
+  position: static;
+  margin-top: -380px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: center;
+  font: 1em sans-serif;
 }
+
+.info {
+  height: 40%;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: center;
+  z-index: 10;
+}
+
+.bottom_info {
+  height: 60%;
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: flex-end;
+
+}
+
+@media only screen and (max-width: 1440px) {
+  .info {
+    height: 300px;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  .banner_block {
+    height: max-content;
+  }
+  .banner_info {
+    margin-top: -250px;
+  }
+  .bannerImg {
+    height: 400px;
+    object-position: top;
+  }
+  .info {
+    height: 200px;
+  }
+
+  .bottom_info {
+    height: max-content;
+  }
+}
+
 /* Banner style end */
 
 /* About Style start */
 .about_profile_Pic {
   max-width: 400px;
+  width: 200px;
   max-height: 400px;
   object-fit: cover;
-  padding: 15px;
+  padding: 10px;
   margin: auto;
   display: block;
+  border-radius: 20px !important;
 }
+
 .social_link {
   display: flex;
   justify-content: flex-start;
   align-items: flex-start;
 }
+
 .social_link a {
   width: 25px;
   height: 25px;
@@ -89,10 +105,12 @@ main {
   border-radius: 50%;
   margin: 15px;
 }
+
 .social_link img {
   width: 100%;
   height: 100%;
 }
+
 /* About Style end */
 /* Resume  Style start */
 .side_stick {
@@ -100,6 +118,7 @@ main {
   padding: 0 0 1px 10px;
   position: relative;
 }
+
 .side_stick::before {
   content: 'o';
   position: absolute;
@@ -113,16 +132,47 @@ main {
   padding: 5px !important;
   background: linear-gradient(90deg, blue, red);
 }
+
 /*  Resume Style end */
 
 /*  Service Style start */
-.service_card:hover {
-  background: linear-gradient(180deg, rgb(193, 60, 255), rgb(41, 181, 247));
-  color: aliceblue;
+.service_card {
+  background-color: rgb(233, 255, 255);
+  color: #000;
+  border-radius: 1px;
+  width: 20rem;
+  height: 12rem;
+  font-family: 'Times New Roman', Times, serif;
 }
-/*  Service Style end */
 
-.portfolio_card:hover {
-  background-color: rgb(56, 35, 35);
-  color: aliceblue;
+.service_card .card-footer {
+  font-weight: bold;
+  font-family: 'Courier New', Courier, monospace;
+  font-size: large;
+  color: rgb(73, 0, 156);
+}
+
+.service_card:hover {
+  background: linear-gradient(180deg, rgb(60, 177, 255), rgb(9, 24, 8));
+  color: lightcyan;
+}
+
+.service_card:hover .card-footer {
+  color: rgb(255, 148, 148);
+
+}
+
+/*  Service Style end */
+.portfolio_card{
+  color: #000;
+  background-color: rgb(195, 242, 250);
+}
+.portfolio_card a{
+text-decoration: none;
+text-align: center;
+display: block;
+font-size: 18px;
+}
+.portfolio_card .card-footer:hover{
+background-color: cadetblue;
 }
